--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,6 +57,8 @@
               <% }) %>
             </div>
 
+            <p class="summary"><%= item.summary || '暂无摘要' %></p>
+
             <div class="row">
               <span>来源：<%= item.source %></span>
               <% if (item.publishedAt) { %>
