--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
         <p class="sub2">神经科学 ｜ 人工智能 ｜ 生命科学</p>
       </div>
       <div class="actions">
-        <a class="icon-btn" href="/consciousness" title="意识简报" aria-label="意识简报">🧠</a>
+        <button class="icon-btn" type="button" title="登录（预留）" aria-label="登录（预留）">🔐</button>
         <a class="icon-btn wechat-btn" href="https://mp.weixin.qq.com/s/BgZCDRICPzGcvI3ITpFgSg" target="_blank" rel="noreferrer" title="WeChat" aria-label="WeChat">
           <img class="icon-svg" src="/icons/wechat.svg" alt="WeChat" />
         </a>
