chore: restore Medical Xpress source and add MiniMax footer credit

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -110,6 +110,7 @@
 
     <footer class="footer glass">
       <div class="brand">© Powered by noetex.ai</div>
+      <div class="brand">由MiniMax M2.5大模型支持</div>
       <div class="socials" aria-label="社交媒体链接">
         <a class="social" href="https://mp.weixin.qq.com/s/BgZCDRICPzGcvI3ITpFgSg" target="_blank" rel="noreferrer" title="微信">微</a>
         <a class="social" href="https://www.xiaohongshu.com/user/profile/632f3c94000000002303e0a9" target="_blank" rel="noreferrer" title="小红书">红</a>
