feat: homepage cross-category dedupe, better zh title/summary quality, align login/wechat icons

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,9 @@
         <p class="sub2">神经科学 ｜ 人工智能 ｜ 生命科学</p>
       </div>
       <div class="actions">
-        <button class="icon-btn" type="button" title="登录（预留）" aria-label="登录（预留）">🔐</button>
+        <button class="icon-btn login-btn" type="button" title="登录（预留）" aria-label="登录（预留）">
+          <img class="icon-svg" src="/icons/login.svg" alt="Login" />
+        </button>
         <a class="icon-btn wechat-btn" href="https://mp.weixin.qq.com/s/BgZCDRICPzGcvI3ITpFgSg" target="_blank" rel="noreferrer" title="WeChat" aria-label="WeChat">
           <img class="icon-svg" src="/icons/wechat.svg" alt="WeChat" />
         </a>
